--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,10 +5,11 @@
 	body {font-family:Calibri;
 	 background-color:F2F2F2;
 	 text-align:center }
-	h1 {color:#Al6633C; font-weight:bold; }
-	table {width:100%; }
+	h1 {color:#A6633C; font-weight:bold; }
+	table {width:100%;  }
 	p {color:#401A0C; 
 	font-style:italic;}
+	a {color:#A65A3F; font-weight:bold; background-color:#401A0C; }
 
 </style>
 
